[workspace]
members = [
    "clau",
    "clau-core",
    "clau-runtime",
    "clau-mcp",
    "clau-macros",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/frgmt0/clau.rs"
homepage = "https://github.com/frgmt0/clau.rs"
documentation = "https://docs.rs/clau"
authors = ["clau.rs contributors"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
tracing = "0.1"
bytes = "1.7"
async-trait = "0.1"

# Dev dependencies
proptest = "1.5"
insta = "1.40"
wiremock = "0.6"
dotenv = "0.15"
