[package]
name = "clau"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Rust SDK for Claude Code - type-safe async API"
keywords = ["sdk", "ai", "claude", "anthropic", "api"]
categories = ["api-bindings", "development-tools"]
readme = "../README.md"

[dependencies]
clau-core = { version = "0.1.0", path = "../clau-core" }
clau-runtime = { version = "0.1.0", path = "../clau-runtime" }
clau-mcp = { version = "0.1.0", path = "../clau-mcp", optional = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }

[features]
default = []
mcp = ["clau-mcp"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]